--- a/locales.html
+++ b/locales.html
@@ -71,8 +71,8 @@
 
                     <ul>
                         <li><a href="#">Contactanos</a></li>
-                        <li><a href="#">Locales </a></li>
-                        <li><a href="#">Politicas de privacidad</a></li>
+                        <li><a href="locales.html">Locales </a></li>
+                        <li><a href="privacy.html">Politicas de privacidad</a></li>
                         
                     </ul>
                 </div>
