--- a/index.html
+++ b/index.html
@@ -17,12 +17,19 @@
  
   <!-- Css-->
     <link  rel="stylesheet" href="styles.css"> 
+  <!--Boton Whatsapp-->  
+  <link  rel="stylesheet" href="whatsapp.css"> 
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> SJ  | Indumentaria informal</title>
 </head>
 <body>
 
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <a href="https://api.whatsapp.com/send?phone=5195508107&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202." class="float" target="_blank">
+    <i class="fa fa-whatsapp my-float"></i>
+    </a>
 
     <footer class="footer"> 
 
@@ -47,7 +54,7 @@
 
                 <h4>Servicios </h4>
                    <ul>
-                    <li><a href="#">Ayuda </a> </li>
+                    <li><a href="help.html">Ayuda </a> </li>
                     <li><a href="#">Suscribete</a></li>
                    </ul>
             </div>
