--- a/privacy.html
+++ b/privacy.html
@@ -17,13 +17,27 @@
  
   <!-- Css-->
     <link  rel="stylesheet" href="styles.css"> 
+
+ <!--Boton Whatsapp-->  
+ <link  rel="stylesheet" href="whatsapp.css"> 
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> SJ  | Indumentaria informal</title>
 </head>
 <body>
+
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <a href="https://api.whatsapp.com/send?phone=5195508107&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202." class="float" target="_blank">
+    <i class="fa fa-whatsapp my-float"></i>
+    </a>
+
+
+
 <main>
   <section class="privacy">
-  <h2 class="text-center mt-4 mb-4"> POLITICAS DE PRIVACIDAD</h2>
+  <h2 class="text-center mt-4 mb-4"> POLíTICAS DE PRIVACIDAD</h2>
   <br>
   <p>
     Esta Política de Privacidad está destinada a informar al Usuario sobre el modo en la que se da tratamiento a su Información Personal.
@@ -81,7 +95,7 @@
 
                 <h4>Servicios </h4>
                    <ul>
-                    <li><a href="#">Ayuda </a> </li>
+                    <li><a href="help.html">Ayuda </a> </li>
                     <li><a href="#">Suscribete</a></li>
                    </ul>
             </div>
