--- a/locales.html
+++ b/locales.html
@@ -17,11 +17,25 @@
  
   <!-- Css-->
     <link  rel="stylesheet" type="text/css" href="styles.css"> 
+
+ <!--Boton Whatsapp-->  
+ <link  rel="stylesheet" href="whatsapp.css"> 
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> SJ  | Indumentaria informal</title>
 </head>
 <body>
-    <h2>Nuestros Locales</h2>
+
+
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <a href="https://api.whatsapp.com/send?phone=5195508107&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202." class="float" target="_blank">
+    <i class="fa fa-whatsapp my-float"></i>
+    </a>
+
+
+
+    <h2 class="text-center mt-4 mb-4">Nuestros Locales</h2>
     <br>
     <br>
 
@@ -81,7 +95,7 @@
 
                 <h4>Servicios </h4>
                    <ul>
-                    <li><a href="#">Ayuda </a> </li>
+                    <li><a href="help.html">Ayuda </a> </li>
                     <li><a href="#">Suscribete</a></li>
                    </ul>
             </div>
