cambie los titles

--- a/locales.html
+++ b/locales.html
@@ -22,7 +22,7 @@
  <link  rel="stylesheet" href="whatsapp.css"> 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> SJ  | Indumentaria informal</title>
+    <title> SJ  | Locales</title>
 </head>
 <body>
 
