--- a/privacy.html
+++ b/privacy.html
@@ -23,7 +23,7 @@
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> SJ  | Indumentaria informal</title>
+    <title> SJ  | Privacidad</title>
 </head>
 <body>
 
