--- a/help.html
+++ b/help.html
@@ -155,7 +155,8 @@
                 <br>
                 <br>
                 <label for="mensaje">Dejanos tu consulta:</label>
-                <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
+                <br>
+                <textarea id="mensaje" name="mensaje" rows="4" style="width: 300px;" required></textarea>
                 <br>
                 <br>
                 <input type="submit" value="Enviar">
