--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link  rel="stylesheet" href="whatsapp.css"> 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> SJ  | Indumentaria informal</title>
+    <title> SJ  | hola</title>
 </head>
 <body>
 
