--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
  
   <!-- Css-->
-    <link  rel="stylesheet" href="/styles.css"> 
-    <link rel="stylesheet" href="/estilos.css">
+    <link  rel="stylesheet" href="styles.css"> 
+    <link rel="stylesheet" href="estilos.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> SJ  | Indumentaria informal</title>
 </head>
@@ -73,9 +73,9 @@
         </div>
     </header>
     <main class="productos">
-        <img src="/imagenes/tops.jpg" width="300px">
-        <img src="/imagenes/conjunto.jpg" width="300px">
-        <img src="/imagenes/ropa hombre.jpg" width="300px">
+        <img src="imagenes/tops.jpg" width="300px">
+        <img src="imagenes/conjunto.jpg" width="300px">
+        <img src="imagenes/ropa hombre.jpg" width="300px">
     </main>
 
     <footer class="footer"> 
