--- a/help.html
+++ b/help.html
@@ -35,7 +35,7 @@
 
 
    <main class="help-container">
-    <h2 class="text-center mt-4 mb-4" > Ayuda </h2>
+    <h2 class="text-center mt-4 mb-4" > AYUDA</h2>
     <br>
 
     <section class="content-help">
