--- a/prod_mujeres.html
+++ b/prod_mujeres.html
@@ -90,7 +90,7 @@
                 </div>
                 <ul class="nav-menu">
                     <li class="menu-item"><a href="prod_hombres.html">HOMBRE</a></li>
-                    <li class="menu-item"><a href="prod_mujer.html">MUJER</a></li>
+                    <li class="menu-item"><a href="prod_mujeres.html">MUJER</a></li>
                     <li class="menu-item"><a href="prod_ninos.html">NIÑOS</a></li>
                     <li class="menu-item"><a href="prod_acces.html">ACCESORIOS</a></li>
                 </ul>
