--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="header-icon-nav">
             <div class="header-icon-links">
                 <ul>
-                    <li><a href="/suscribite.html">Suscribite&nbsp;&nbsp;&nbsp;</a></li>
+                    <li><a href="suscribite.html">Suscribite&nbsp;&nbsp;&nbsp;</a></li>
                     <li><a href="#">Locales&nbsp;&nbsp;&nbsp; </a></li>
                     <li><a href="#">Ayuda&nbsp;&nbsp;&nbsp;</a></li>
                 </ul>
