--- a/suscribite.html
+++ b/suscribite.html
@@ -49,7 +49,7 @@
             <div class="header-icon-nav">
                 <div class="header-icon-links">
                     <ul>
-                        <li><a href="/suscribite.html">Suscribite&nbsp;&nbsp;&nbsp;</a></li>
+                        <li><a href="suscribite.html">Suscribite&nbsp;&nbsp;&nbsp;</a></li>
                         <li><a href="#">Locales&nbsp;&nbsp;&nbsp; </a></li>
                         <li><a href="#">Ayuda&nbsp;&nbsp;&nbsp;</a></li>
                     </ul>
@@ -63,7 +63,6 @@
                         <li class="menu-item"><a href="prod_hombres.html">HOMBRE</a></li>
                         <li class="menu-item"><a href="prod_mujer.html">MUJER</a></li>
                         <li class="menu-item"><a href="prod_ninos.html">NIÑOS</a></li>
-                        <li class="menu-item"><a href="prod_acces.html">ACCESORIOS</a></li>
                     </ul>
                     <div class="nav-buscar">
                         <a href="#"><i class="bi bi-search"></i></a>
