--- a/privacy.html
+++ b/privacy.html
@@ -96,7 +96,7 @@
                 <h4>Servicios </h4>
                    
                     <p><a href="help.html">Ayuda </a> </p>
-                    <p><a href="">Suscibete</a></p>
+                    <p><a href="suscribite.html">Suscribete</a></p>
                    
             </div>
 
