--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             
             <div class="nav-items">
                 <div class="nav-logo">
-                    <a href="index.html"><img id="logo" src="imagenes/logosj.ico" alt="Logo Indumentaria Informal"></a>
+                    <a href="index.html"><img id="logo" src="imagenes/logosj.png" alt="Logo Indumentaria Informal"></a>
                 </div>
                 <ul class="nav-menu">
                     <li class="menu-item"><a href="prod_hombres.html">HOMBRE</a></li>
