--- a/suscribite.html
+++ b/suscribite.html
@@ -50,8 +50,8 @@
                 <div class="header-icon-links">
                     <ul>
                         <li><a href="suscribite.html">Suscribite&nbsp;&nbsp;&nbsp;</a></li>
-                        <li><a href="#">Locales&nbsp;&nbsp;&nbsp; </a></li>
-                        <li><a href="#">Ayuda&nbsp;&nbsp;&nbsp;</a></li>
+                        <li><a href="locales.html">Locales&nbsp;&nbsp;&nbsp; </a></li>
+                        <li><a href="help.html">Ayuda&nbsp;&nbsp;&nbsp;</a></li>
                     </ul>
                 </div>
                 
