--- a/prod_mujeres.html
+++ b/prod_mujeres.html
@@ -78,15 +78,15 @@
         <div class="header-icon-nav">
             <div class="header-icon-links">
                 <ul>
-                    <li><a href="#">Suscribite&nbsp;&nbsp;&nbsp;</a></li>
-                    <li><a href="#">Locales&nbsp;&nbsp;&nbsp; </a></li>
-                    <li><a href="#">Ayuda&nbsp;&nbsp;&nbsp;</a></li>
+                    <li><a href="suscribite.html">Suscribite&nbsp;&nbsp;&nbsp;</a></li>
+                    <li><a href="locales.html">Locales&nbsp;&nbsp;&nbsp; </a></li>
+                    <li><a href="help.html">Ayuda&nbsp;&nbsp;&nbsp;</a></li>
                 </ul>
             </div>
             
             <div class="nav-items">
                 <div class="nav-logo">
-                    <a href="index.html"><img id="logo" src="imagenes/imagenes/logosj.png" alt="Logo Indumentaria Informal"></a>
+                    <a href="index.html"><img id="logo" src="imagenes/logosj.png" alt="Logo Indumentaria Informal"></a>
                 </div>
                 <ul class="nav-menu">
                     <li class="menu-item"><a href="prod_hombres.html">HOMBRE</a></li>
