--- a/prod_ninos.html
+++ b/prod_ninos.html
@@ -78,9 +78,9 @@
         <div class="header-icon-nav">
             <div class="header-icon-links">
                 <ul>
-                    <li><a href="#">Suscribite&nbsp;&nbsp;&nbsp;</a></li>
-                    <li><a href="#">Locales&nbsp;&nbsp;&nbsp; </a></li>
-                    <li><a href="#">Ayuda&nbsp;&nbsp;&nbsp;</a></li>
+                    <li><a href="suscribite.html">Suscribite&nbsp;&nbsp;&nbsp;</a></li>
+                    <li><a href="locales.html">Locales&nbsp;&nbsp;&nbsp; </a></li>
+                    <li><a href="help.html">Ayuda&nbsp;&nbsp;&nbsp;</a></li>
                 </ul>
             </div>
             
