--- a/locales.html
+++ b/locales.html
@@ -17,6 +17,7 @@
  
   <!-- Css-->
     <link  rel="stylesheet" type="text/css" href="styles.css"> 
+    <link  rel="stylesheet" type="text/css" href="estilos.css"> 
 
  <!--Boton Whatsapp-->  
  <link  rel="stylesheet" href="whatsapp.css"> 
