--- a/privacy.html
+++ b/privacy.html
@@ -16,7 +16,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
  
   <!-- Css-->
-    <link  rel="stylesheet" href="styles.css"> 
+    <link  rel="stylesheet" href="styles.css" href="styles.css" > 
+    <link  rel="stylesheet" type="text/css" href="estilos.css"> 
 
  <!--Boton Whatsapp-->  
  <link  rel="stylesheet" href="whatsapp.css"> 
