--- a/help.html
+++ b/help.html
@@ -17,6 +17,7 @@
  
   <!-- Css-->
     <link  rel="stylesheet" href="styles.css"> 
+    <link  rel="stylesheet" href="estilos.css"> 
 
  <!--Boton Whatsapp-->  
  <link  rel="stylesheet" href="whatsapp.css"> 
