--- a/index.html
+++ b/index.html
@@ -19,6 +19,35 @@
     <link rel="stylesheet" href="estilos.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> SJ  | Indumentaria informal</title>
+	<!-- Css-->
+
+<style>
+    .container {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr); /* 3 columnas de igual ancho, estandard */
+      grid-gap: 10px; /* gap between grid items */
+    }
+    
+    .item {
+      background-color: white;
+      padding: 20px;
+      text-align: center;
+	  border:2px #FFFFFF dotted;
+    }
+
+    /* Responsive layout */
+    @media (max-width: 768px) {
+      .container {
+        grid-template-columns: repeat(2, 1fr); /* 2 columnas en pantalla de tablet */
+      }
+    }
+
+    @media (max-width: 480px) {
+      .container {
+        grid-template-columns: 1fr; /* 1 columna en pantallas mas chicas */
+      }
+    }
+  </style>
 </head>
 <body>
     <header>
