--- a/prod_hombres.html
+++ b/prod_hombres.html
@@ -43,7 +43,7 @@
       }
     }
   </style>
-    
+    <link  rel="stylesheet" type="text/css" href="styles.css">
     <link  rel="stylesheet" href="styles.css"> 
     <link rel="stylesheet" href="estilos.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
