--- a/help.html
+++ b/help.html
@@ -57,7 +57,7 @@
                 <ul>
                     <li><a href="suscribite.html">Suscribite&nbsp;&nbsp;&nbsp;</a></li>
                     <li><a href="locales.html">Locales&nbsp;&nbsp;&nbsp; </a></li>
-                    <li><a href="ayuda.html">Ayuda&nbsp;&nbsp;&nbsp;</a></li>
+                    <li><a href="help.html">Ayuda&nbsp;&nbsp;&nbsp;</a></li>
                 </ul>
             </div>
             
