--- a/suscribite.html
+++ b/suscribite.html
@@ -67,7 +67,7 @@
                     </div>
                     <ul class="nav-menu">
                         <li class="menu-item"><a href="prod_hombres.html">HOMBRE</a></li>
-                        <li class="menu-item"><a href="prod_mujer.html">MUJER</a></li>
+                        <li class="menu-item"><a href="prod_mujeres.html">MUJER</a></li>
                         <li class="menu-item"><a href="prod_ninos.html">NIÑOS</a></li>
                     </ul>
                     <div class="nav-buscar">
