--- a/privacy.html
+++ b/privacy.html
@@ -146,7 +146,7 @@
                 <h4>Servicios </h4>
                    
                     <p><a href="help.html">Ayuda </a> </p>
-                    <p><a href="suscribite.html">Suscribete</a></p>
+                    <p><a href="suscribite.html">Suscribite</a></p>
                    
             </div>
 
