--- a/help.html
+++ b/help.html
@@ -203,7 +203,7 @@
                 <textarea id="mensaje" name="mensaje" rows="4" style="width: 300px;" required></textarea>
                 <br>
                 <br>
-                <input type="submit" value="Enviar">
+                <input type="submit" value="Enviar" class="boton">
             </form>
         
         
