--- a/prod_hombres.html
+++ b/prod_hombres.html
@@ -45,10 +45,11 @@
     }
   </style>
     <link  rel="stylesheet" type="text/css" href="styles.css">
-    <link  rel="stylesheet" href="styles.css"> 
-    <link rel="stylesheet" href="estilos.css">
+    <link  rel="stylesheet" href="estilos.css"> 
+   
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> SJ  | Indumentaria informal</title>
+    <title> SJ  | HOMBRES</title>
 </head>
 <body>
 
