--- a/suscribite.html
+++ b/suscribite.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <!-- Favicon-->
     
-        <link rel="icon" href="imagenes/iconoropa.ico"> 
+      <link rel="icon" href="imgenes/logosj.ico">
       <!--Bootstrap--> 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -19,6 +19,11 @@
         <link rel="stylesheet" href="estilos.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> SJ  | Formulario Suscripcion</title>
+
+        <!--Boton Whatsapp-->  
+ <link  rel="stylesheet" href="whatsapp.css"> 
+
+
     </head>
     <body>
 
