--- a/prod_hombres.html
+++ b/prod_hombres.html
@@ -51,7 +51,7 @@
  <link  rel="stylesheet" href="whatsapp.css"> 
    
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">n                                              
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">                                             
     <title> SJ  | HOMBRES</title>
 </head>
 <body>
