--- a/prod_mujeres.html
+++ b/prod_mujeres.html
@@ -7,7 +7,7 @@
   <!-- Favicon-->
 
   <link rel="icon" href="imgenes/logosj.ico">
-  
+
   <!--Bootstrap--> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -53,7 +53,7 @@
     <link  rel="stylesheet" href="styles.css"> 
     <link rel="stylesheet" href="estilos.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> SJ  | Indumentaria informal</title>
+    <title> SJ  | MUJERES</title>
 </head>
 <body>
 
