--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  
   <!-- Css-->
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="stylesheet" href="styles.css"> 
+    <link rel="stylesheet" href="estilos.css"> 
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> SJ  | Indumentaria informal</title>
