--- a/suscribite.html
+++ b/suscribite.html
@@ -89,7 +89,7 @@
                 <fieldset class="container-datos-form">
 
                     <div class="dato-foto">
-                        <img src="/imagenes/foto_perfil3.jpg" id="foto" class="foto" width="150px"><br>
+                        <img src="imagenes/foto_perfil3.jpg" id="foto" class="foto" width="150px"><br>
                         <label for="foto">Seleccionar foto de perfil</Label>
                         <br><br>
                         <input type="file" id="archivo" name="archivo">
