--- a/suscribite.html
+++ b/suscribite.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
     <head>
         <meta charset="UTF-8">
         <meta name="author" content="Grupo 16">
