--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
                 <div class="footer-links">
 
-                    <h4>Sobre Nosotros <h4> </h4>
+                    <h4>Sobre Nosotros </h4>
 
                     
                         <p><a href="help.html">Contactanos</a></p>
