--- a/suscribite.html
+++ b/suscribite.html
@@ -180,9 +180,9 @@
                   <h4>Siguenos </h4>
 
                   <div class="social-link">
-                   <a href="#"><i class="fab fa-facebook-f"></i></a>
-                   <a href="#"><i class="fab fa-instagram"></i></a>
-                   <a href="#"><i class="fab fa-tiktok"></i></a>
+                    <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.tiktok.com/"><i class="fab fa-tiktok"></i></a>
                 </div>
             </div>  
 
