cambio de links y colores de remeras
eso

--- a/prod_hombres.html
+++ b/prod_hombres.html
@@ -135,19 +135,19 @@
   
 	<div class="item">
     <img src="imag/RemH4.webp" alt="Image 2">
-    <p>Remera adulto negra marca Adidas</p>
+    <p>Remera adulto amarilla marca Adidas</p>
 	<p>Precio: $15000</p>
 	</div>
 	
 		<div class="item"> 
     <img src="imag/RemH5.webp" alt="Image 1">
-    <p>Remera adulto azul claro</p>
+    <p>Remera adulto blanca claro</p>
 	<p>Precio: $15000</p>
 	</div>
   
 	<div class="item">
     <img src="imag/RemH6.webp" alt="Image 2">
-    <p>Remera adulto negra marca Adidas</p>
+    <p>Remera adulto verde marca Adidas</p>
 	<p>Precio: $15000</p>
 	</div>
 			
