--- a/index.html
+++ b/index.html
@@ -132,19 +132,19 @@
   
 	<div class="item">
     <img src="imag/RemH4.webp" alt="Image 2">
-    <p>Remera adulto negra marca Adidas</p>
+    <p>Remera adulto amarilla marca Adidas</p>
 	<p>Precio: $15000</p>
 	</div>
 	
 		<div class="item"> 
     <img src="imag/RemH5.webp" alt="Image 1">
-    <p>Remera adulto azul claro</p>
+    <p>Remera adulto blanca claro</p>
 	<p>Precio: $15000</p>
 	</div>
   
 	<div class="item">
     <img src="imag/RemH6.webp" alt="Image 2">
-    <p>Remera adulto negra marca Adidas</p>
+    <p>Remera adulto  verde marca Adidas</p>
 	<p>Precio: $15000</p>
 	</div>
 			
@@ -267,9 +267,9 @@
                   <h4>Siguenos </h4>
 
                   <div class="social-link">
-                   <a href="#"><i class="fab fa-facebook-f"></i></a>
-                   <a href="#"><i class="fab fa-instagram"></i></a>
-                   <a href="#"><i class="fab fa-tiktok"></i></a>
+                   <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+                   <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                   <a href="https://www.tiktok.com/"><i class="fab fa-tiktok"></i></a>
                 </div>
             </div>  
 
