--- a/index_todos.html
+++ b/index_todos.html
@@ -176,50 +176,9 @@
 	
   </div>
 
-    <footer class="footer"> 
+    <footer class="footer"></footer>
 
-        <div class="containerfooter"> 
-
-            <div class="footer-row">
-
-
-                <div class="footer-links">
-
-                    <h4>Sobre Nosotros </h4>
-
-                    <ul>
-                        <li><a href="#">Contactanos</a></li>
-                        <li><a href="#">Locales </a></li>
-                        <li><a href="#">Politicas de privacidad</a></li>
-                        
-                    </ul>
-                </div>
-
-                <div class="footer-links"> 
-
-                    <h4>Servicios </h4>
-                    <ul>
-                        <li><a href="#">Ayuda </a> </li>
-                        <li><a href="#">Suscribete</a></li>
-                    </ul>
-                </div>
-
-                <div class="footer-links">
-
-                    <h4>Siguenos </h4>
-
-                    <div class="social-link">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-tiktok"></i></a>
-                    </div>
-                </div>  
-
-            </div> 
-        </div>
-
-    </footer>
-
+    <script src="footer.js"></script>
     <script src="header.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
