--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 
-  <link rel="icon" href="imgenes/logosj.ico">
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="author" content="Grupo 16">
+    <meta name=" description" content="Pagina de indumentaria">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Favicon-->
+<link rel="icon" href="imgenes/logosj.ico">
   <!--Bootstrap--> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
